--- a/src/threshold_ring_signature_library/CMakeLists.txt
+++ b/src/threshold_ring_signature_library/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.0.2)
-project(qredo VERSION 0.1.0 LANGUAGES CXX)
+project(GTiP VERSION 0.1.0 LANGUAGES CXX)
 
 set(CMAKE_CXX_STANDARD 11)
 set(THREADS_PREFER_PTHREAD_FLAG ON)
